--- a/style.css
+++ b/style.css
@@ -5,9 +5,15 @@
 }
 :root {
   font-size: 62.5%;
+
+  --primary-text-color:
+  --secondary-text-color:
+
+
 }
 
 body{
+  font-family: 'Poppins', sans-serif;
   font-size: 1.6rem;
   background-image: url(./assets/thomas-heintz-0tgMnMIYQ9Y-unsplash.jpg);
   background-repeat: no-repeat;
@@ -17,9 +23,50 @@ body{
 header{
   display: flex;
   justify-content: space-between;
-  padding: 6rem;
+  padding: 10rem;
 }
-ul{
+nav ul{
   display: flex;
   gap: 10rem;
+  font-size: 1.6rem;
+  list-style: none;
+}
+nav ul li a{
+  text-decoration: none;
+}
+nav ul li a:active{
+  color: #f0ab2b;
+}
+nav ul li a:hover{
+  box-shadow: 4rem 4rem 4rem 4rem rgba(0, 0, 0, 0.1);
+  color: #f0ab2b;
+  border: none;
+  border-radius: 1rem;
+}
+
+.hero h1 {
+  font-size: 4.8rem;
+  letter-spacing: 0.4rem;
+}
+.hero h2{
+  font-size:3.2rem;
+  letter-spacing: 0.2rem;
+}
+.hero span {
+  font-size: 5.4rem;
+  background: linear-gradient(to right, #ff9900, #ff5e62);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+p{
+  font-size: 1.6rem;
+  letter-spacing: 0.2rem;
+}
+.page {
+  display: grid;
+  grid-template-areas: 2fr;
+  max-width: 112rem;
+  padding: 0 20rem;
+  margin-top: 10rem;
 }
