--- a/style.css
+++ b/style.css
@@ -10,63 +10,90 @@
   --secondary-text-color:
 
 
+
 }
 
 body{
   font-family: 'Poppins', sans-serif;
   font-size: 1.6rem;
-  background-image: url(./assets/thomas-heintz-0tgMnMIYQ9Y-unsplash.jpg);
-  background-repeat: no-repeat;
+  background-image: url(./assets/dave-PEkfSAxeplg-unsplash.jpg);
   margin: 0 auto;
+  width: 100%;
 }
+
 
 header{
   display: flex;
   justify-content: space-between;
-  padding: 10rem;
+  padding: 6rem 10rem;
 }
 nav ul{
   display: flex;
-  gap: 10rem;
+  gap: 5rem;
   font-size: 1.6rem;
   list-style: none;
 }
 nav ul li a{
+  color: #000;
   text-decoration: none;
+  font-weight: 700;
+  text-shadow: 1rem 1rem 1rem 1rem ;
+  
 }
 nav ul li a:active{
-  color: #f0ab2b;
-}
-nav ul li a:hover{
-  box-shadow: 4rem 4rem 4rem 4rem rgba(0, 0, 0, 0.1);
-  color: #f0ab2b;
-  border: none;
-  border-radius: 1rem;
+  color: #6201c3;
 }
 
 .hero h1 {
-  font-size: 4.8rem;
+  font-size: 4.0rem;
   letter-spacing: 0.4rem;
+  opacity: 0.8;
+  margin-bottom: 2rem;
 }
 .hero h2{
-  font-size:3.2rem;
-  letter-spacing: 0.2rem;
+  font-size:2.8rem;
+  letter-spacing: 1rem;
+  margin-bottom: 2rem;
+  opacity: 0.7;
 }
-.hero span {
+.hero h1 span {
   font-size: 5.4rem;
-  background: linear-gradient(to right, #ff9900, #ff5e62);
+  background: linear-gradient(to right, #ee039c, #6201c3);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
 }
-p{
-  font-size: 1.6rem;
-  letter-spacing: 0.2rem;
+.hero p{
+  font-size: 2rem;
+  letter-spacing: 0.3rem;
+  font-weight: 600;
+  color: #000;
+  opacity: 0.7;
 }
 .page {
-  display: grid;
-  grid-template-areas: 2fr;
+  display: flex;
   max-width: 112rem;
-  padding: 0 20rem;
+  margin:0 auto;
+}
+.hero{
+  width: 100%;
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
+  
+}
+.hero-text{
   margin-top: 10rem;
+}
+.hero-image {
+  width: 48rem;
+  height: 69rem;
+}
+.hero-container {
+  display: flex;
+  align-items: center;
+}
+.hero-skills ul{
+  display: flex;
+  gap: 4rem;
 }
