--- a/style.css
+++ b/style.css
@@ -43,6 +43,11 @@ nav ul li a{
 nav ul li a:active{
   color: #6201c3;
 }
+.page {
+  display: flex;
+  max-width: 112rem;
+  margin:0 auto;
+}
 
 .hero h1 {
   font-size: 4.0rem;
@@ -69,12 +74,9 @@ nav ul li a:active{
   font-weight: 600;
   color: #000;
   opacity: 0.7;
+  margin-bottom: 4rem;
 }
-.page {
-  display: flex;
-  max-width: 112rem;
-  margin:0 auto;
-}
+
 .hero{
   width: 100%;
   display: flex;
@@ -83,7 +85,7 @@ nav ul li a:active{
   
 }
 .hero-text{
-  margin-top: 10rem;
+  margin-top: 6rem;
 }
 .hero-image {
   width: 48rem;
@@ -96,4 +98,10 @@ nav ul li a:active{
 .hero-skills ul{
   display: flex;
   gap: 4rem;
+  list-style: none;
+}
+
+.hero-skills ul li img{
+  width: 4rem;
+  height: 4rem;
 }
