--- a/style.css
+++ b/style.css
@@ -8,19 +8,18 @@
 
   --primary-text-color:
   --secondary-text-color:
-
-
-
 }
 
 body{
   font-family: 'Poppins', sans-serif;
   font-size: 1.6rem;
-  background-image: url(./assets/dave-PEkfSAxeplg-unsplash.jpg);
   margin: 0 auto;
   width: 100%;
+  background: linear-gradient(-45deg, #ee76525a, #e73c7e7e, #23a5d568, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
 }
-
 
 header{
   display: flex;
@@ -87,10 +86,6 @@ nav ul li a:active{
 .hero-text{
   margin-top: 6rem;
 }
-.hero-image {
-  width: 48rem;
-  height: 69rem;
-}
 .hero-container {
   display: flex;
   align-items: center;
@@ -104,4 +99,99 @@ nav ul li a:active{
 .hero-skills ul li img{
   width: 4rem;
   height: 4rem;
+}
+.circle1 {
+  position: relative;
+  width: 16rem;
+  height: 16rem;
+  border-radius: 50%;
+  background:linear-gradient(to right, #71efde, #6201c3) ;
+  opacity: 0.2;
+  animation: moveCircle1 20s ease infinite;
+}
+.circle2 {
+  position: relative;
+  width: 16rem;
+  height: 16rem;
+  border-radius: 50%;
+  background:linear-gradient(to right, #f293d1, #a462e6) ;
+  opacity: 0.2;
+  animation: moveCircle2 20s ease infinite;
+}
+.circle3 {
+  position: relative;
+  width: 16rem;
+  height: 16rem;
+  border-radius: 50%;
+  background:linear-gradient(to right, #d85fae, #7b13e4) ;
+  opacity: 0.2;
+  animation: moveCircle3 20s ease infinite;
+}
+.circle4 {
+  position: relative;
+  width: 16rem;
+  height: 16rem;
+  border-radius: 50%;
+  background:linear-gradient(to right, #9430e5, #3ce4ce) ;
+  opacity: 0.2;
+  animation: moveCircle4 20s ease infinite;
+}
+.circle5 {
+  position: relative;
+  width: 16rem;
+  height: 16rem;
+  border-radius: 50%;
+  background:linear-gradient(to right, #f054e6, #e476b5) ;
+  opacity: 0.2;
+  animation: moveCircle5 20s ease infinite;
+}
+@keyframes moveCircle1 {
+  0% { left: -70rem; top: 40rem; }
+  25% { left: -80rem; top: 20rem; }
+  50% { left: 30rem; top: 70rem; }
+  75% { left: 20rem; top: -70rem; }
+  100% { left: -70rem; top: 40rem; }
+}
+@keyframes moveCircle2 {
+  0% { left: 40rem; top: 0; }
+  20% { left: -40rem; top: 20rem; }
+  60% { left: 20rem; top: 60rem; }
+  80% { left: -70rem; top: -30rem; }
+  100% { left: 40rem; top: 0; }
+}
+@keyframes moveCircle3 {
+  0% { left: 50rem; top: -20rem; }
+  20% { left: -40rem; top: -20rem; }
+  50% { left: -20rem; top: 60rem; }
+  80% { left: 40rem; top: 10rem; }
+  100% { left: 50rem; top: -20rem; }
+}
+@keyframes moveCircle4 {
+  0% {right: -20rem; left: 0; top: 0; }
+  30% { left: -40rem; top: 20rem; }
+  50% { left: 30rem; top: -30rem; }
+  70% { left: 40rem; top: 10rem; }
+  100% { right: -20rem; left: 0; top: 0; }
+  }
+
+@keyframes moveCircle5 {
+  0% { left: -30rem; top: -30rem; }
+  25% { left: -40rem; top: 20rem; }
+  50% { left: 40rem; top: -0rem; }
+  75% { left: -10rem; top: -40rem; }
+  100% { left: -30rem; top: -30rem;  }
+}
+
+@keyframes gradient {
+  0% {
+      background-position: 0% 50%;
+  }
+
+  50% {
+      background-position: 100% 50%;
+  }
+
+  100% {
+      background-position: 0% 50%;
+  }
 }
