--- a/style.css
+++ b/style.css
@@ -10,12 +10,15 @@
   --secondary-text-color:
 }
 
+.hide {
+  display: none;
+}
 body{
   font-family: 'Poppins', sans-serif;
   font-size: 1.6rem;
   margin: 0 auto;
   width: 100%;
-  background: linear-gradient(-45deg, #ee76525a, #e73c7e7e, #23a5d568, #23d5ab);
+  background: linear-gradient(-45deg, #e1572d5a, #e73c7e7e, #23a5d568, #e66c9f);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   height: 100vh;
@@ -23,25 +26,38 @@ body{
 
 header{
   display: flex;
+  align-items: center;
   justify-content: space-between;
   padding: 6rem 10rem;
+  margin-bottom: 2rem;
 }
+
+.icons {
+  display: flex;
+  gap: 6rem;
+  align-items: center;
+  list-style: none;
+  justify-content: center;
+}
+
 nav ul{
   display: flex;
   gap: 5rem;
-  font-size: 1.6rem;
+  font-size: 2.0rem;
   list-style: none;
 }
 nav ul li a{
-  color: #000;
+  opacity: 0.8;
   text-decoration: none;
-  font-weight: 700;
-  text-shadow: 1rem 1rem 1rem 1rem ;
+  font-weight: bold;
+  text-transform: uppercase;
+  background: linear-gradient(to right, #ee039c, #e27406);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
   
 }
-nav ul li a:active{
-  color: #6201c3;
-}
+
 .page {
   display: flex;
   max-width: 112rem;
@@ -62,11 +78,16 @@ nav ul li a:active{
 }
 .hero h1 span {
   font-size: 5.4rem;
-  background: linear-gradient(to right, #ee039c, #6201c3);
+  background: linear-gradient(to right, #ee039c, #e06c07);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
+  transition: transform .3s ease;
 }
+.hero h1 span:hover {
+  transform: scale(1.2);
+}
+
 .hero p{
   font-size: 2rem;
   letter-spacing: 0.3rem;
@@ -99,14 +120,18 @@ nav ul li a:active{
 .hero-skills ul li img{
   width: 4rem;
   height: 4rem;
+  transition: transform .3s ease;
+}
+.hero-skills ul li img:hover{
+  transform: scale(1.5);
 }
 .circle1 {
   position: relative;
   width: 16rem;
   height: 16rem;
   border-radius: 50%;
-  background:linear-gradient(to right, #71efde, #6201c3) ;
-  opacity: 0.2;
+  background:linear-gradient(to right, #db8018, #ef2ebb) ;
+  opacity: 0.1;
   animation: moveCircle1 20s ease infinite;
 }
 .circle2 {
@@ -123,8 +148,8 @@ nav ul li a:active{
   width: 16rem;
   height: 16rem;
   border-radius: 50%;
-  background:linear-gradient(to right, #d85fae, #7b13e4) ;
-  opacity: 0.2;
+  background:linear-gradient(to right, #d85fae, #d47c25) ;
+  opacity: 0.1;
   animation: moveCircle3 20s ease infinite;
 }
 .circle4 {
@@ -132,7 +157,7 @@ nav ul li a:active{
   width: 16rem;
   height: 16rem;
   border-radius: 50%;
-  background:linear-gradient(to right, #9430e5, #3ce4ce) ;
+  background:linear-gradient(to right, #e59a3f, #90e7db) ;
   opacity: 0.2;
   animation: moveCircle4 20s ease infinite;
 }
@@ -142,7 +167,7 @@ nav ul li a:active{
   height: 16rem;
   border-radius: 50%;
   background:linear-gradient(to right, #f054e6, #e476b5) ;
-  opacity: 0.2;
+  opacity: 0.1;
   animation: moveCircle5 20s ease infinite;
 }
 @keyframes moveCircle1 {
@@ -154,7 +179,7 @@ nav ul li a:active{
 }
 @keyframes moveCircle2 {
   0% { left: 40rem; top: 0; }
-  20% { left: -40rem; top: 20rem; }
+  20% { left: -10rem; top: 20rem; }
   60% { left: 20rem; top: 60rem; }
   80% { left: -70rem; top: -30rem; }
   100% { left: 40rem; top: 0; }
@@ -173,7 +198,6 @@ nav ul li a:active{
   70% { left: 40rem; top: 10rem; }
   100% { right: -20rem; left: 0; top: 0; }
   }
-
 @keyframes moveCircle5 {
   0% { left: -30rem; top: -30rem; }
   25% { left: -40rem; top: 20rem; }
@@ -181,7 +205,6 @@ nav ul li a:active{
   75% { left: -10rem; top: -40rem; }
   100% { left: -30rem; top: -30rem;  }
 }
-
 @keyframes gradient {
   0% {
       background-position: 0% 50%;
@@ -195,3 +218,5 @@ nav ul li a:active{
       background-position: 0% 50%;
   }
 }
+
+
