--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
 }
 :root {
   font-size: 62.5%;
-
+/*
   --primary-text-color:
-  --secondary-text-color:
+  --secondary-text-color: */
 }
 
 .hide {
@@ -39,15 +39,26 @@ header{
   list-style: none;
   justify-content: center;
 }
+.icons li a {
+  transition: transform .3s ease;
 
-nav ul{
+}
+.icons li svg:hover {
+  transform: scale(1.3);
+}
+.icons:not(:hover) {
+  transition: transform 0.3s ease;
+  transform: scale(1);
+}
+
+.nav-bar ul{
   display: flex;
   gap: 5rem;
   font-size: 2.0rem;
   list-style: none;
 }
-nav ul li a{
-  opacity: 0.8;
+.nav-bar ul li a{
+  opacity: 1;
   text-decoration: none;
   font-weight: bold;
   text-transform: uppercase;
@@ -55,46 +66,16 @@ nav ul li a{
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  
+  transition: transform .2s ease;
+}
+.nav-bar ul li a:hover {
+  transform: scale(1.2);
 }
 
 .page {
   display: flex;
   max-width: 112rem;
   margin:0 auto;
-}
-
-.hero h1 {
-  font-size: 4.0rem;
-  letter-spacing: 0.4rem;
-  opacity: 0.8;
-  margin-bottom: 2rem;
-}
-.hero h2{
-  font-size:2.8rem;
-  letter-spacing: 1rem;
-  margin-bottom: 2rem;
-  opacity: 0.7;
-}
-.hero h1 span {
-  font-size: 5.4rem;
-  background: linear-gradient(to right, #ee039c, #e06c07);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  transition: transform .3s ease;
-}
-.hero h1 span:hover {
-  transform: scale(1.2);
-}
-
-.hero p{
-  font-size: 2rem;
-  letter-spacing: 0.3rem;
-  font-weight: 600;
-  color: #000;
-  opacity: 0.7;
-  margin-bottom: 4rem;
 }
 
 .hero{
@@ -110,6 +91,39 @@ nav ul li a{
 .hero-container {
   display: flex;
   align-items: center;
+}
+
+.hero h1 {
+  font-size: 4.0rem;
+  letter-spacing: 0.4rem;
+  opacity: 0.8;
+  margin-bottom: 2rem;
+}
+.hero h2{
+  font-size:2.8rem;
+  letter-spacing: 1rem;
+  margin-bottom: 2rem;
+  opacity: 0.7;
+}
+.hero-text h1 span{
+  font-size: 5.4rem;
+  background: linear-gradient(to right, #ee039c, #e06c07);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: transform .3s ease;
+}
+.hero-text h1 span:hover{
+  transform: scale(1.5);
+}
+
+.hero-text p{
+  font-size: 2rem;
+  letter-spacing: 0.3rem;
+  font-weight: 600;
+  color: #000;
+  opacity: 0.7;
+  margin-bottom: 4rem;
 }
 .hero-skills ul{
   display: flex;
